<resources>
    <string name="app_name">NewCash</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accounts">Accounts</string>
    <string name="dashboard">Dashboard</string>
    <string name="transactions">Transactions</string>
    <string name="currencies">Currencies</string>
    <string name="enter_account_name">Enter account name…</string>
    <string name="required_field">Required field</string>
    <string name="enter_phone_number">Enter phone number…</string>
    <string name="add_new_account">Add new account</string>
    <string name="change_image">Change image</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="account_image">Account image</string>
    <string name="select_account_type">Select account type</string>
    <string name="enter_description">Enter description…</string>
    <string name="this_field_cant_be_empty">This field can\'t be empty</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="attention">Attention!</string>
    <string name="are_you_sure_of_deletion_cannot_undo_this_process">Are you sure of deletion?, can\'t undo this process</string>
    <string name="yes_iam_sure">Yes, I\'m sure</string>
    <string name="no">No</string>
    <string name="add_new_currency">Add new currency</string>
    <string name="enter_currency_name">Enter currency name…</string>
    <string name="ex_USD_RY">Currency Symbol ex: USD, RY, …</string>
    <string name="add_new_transaction">Add new transaction</string>
    <string name="currency">Currency</string>
    <string name="ex_Currency">USD,R.S,…</string>
    <string name="date">Date</string>
    <string name="_00_0">00.0</string>
    <string name="enter_amount">Enter amount</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="select_account">Select account</string>
    <string name="add_account">Add account</string>
    <string name="add_transaction">Add transaction</string>
    <string name="sent_attend">Send attention</string>
    <string name="money_transition">Money transaction</string>
    <string name="enter_type_name">Enter type name</string>
    <string name="add_new_accounttype">Add new account type</string>
    <string name="account_types">Account types</string>
    <string name="overview">Overview</string>
    <string name="_s1"> </string>
    <string name="_s2">  </string>
    <string name="last_transaction">Last transactions</string>
    <string name="recent_transaction">Recent transactions</string>
    <string name="_seperat">|</string>
    <string name="summery">Summery</string>
    <string name="r_y" translatable="false">(R.Y)</string>
    <string name="this_week">This week</string>
    <string name="items_selected">items selected</string>
    <string name="backup_database">Backup database</string>
    <string name="restore_database">Restore database</string>
    <string name="settings">Settings</string>
    <string name="reports">Reports</string>
    <string name="select_database_file">Select database file</string>
    <string name="permissions_are_required">Permissions are required</string>
    <string name="backup_success">Backup success</string>
    <string name="restore_success">Restore success</string>
    <string name="history">History</string>
</resources>