<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk_top_radius_40"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal">

        <ImageView
            app:tint="?android:attr/textColorPrimary"
            android:transitionName="transition_account_img"
            android:id="@+id/img_account"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/bk_radius_40"
            android:contentDescription="@string/account_image"
            android:src="@drawable/ic_twotone_supervisor_account_24" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:textColor="?android:attr/textColorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/add_new_account"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:padding="0dp"
                android:text="@string/change_image"
                android:textSize="12sp"
                android:textStyle="bold"
                app:icon="@drawable/ic_outline_edit_24"
                app:iconGravity="start" />
        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:endIconMode="clear_text"
                app:helperText="@string/required_field"
                app:helperTextEnabled="false"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/ic_baseline_person_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_account_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_account_name"
                    android:inputType="text"
                    android:paddingEnd="10dp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="20"
                app:endIconDrawable="@drawable/ic_contact"
                app:endIconMode="custom"
                app:prefixText=""
                app:prefixTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_baseline_phone_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_account_phone1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_phone_number"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/select_account_type"
                app:helperText="@string/required_field"
                app:helperTextTextColor="@color/red"
                app:startIconDrawable="@drawable/ic_accounttype">

                <AutoCompleteTextView
                    android:id="@+id/input_account_type"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:includeFontPadding="true"
                    android:inputType="none"
                    android:paddingEnd="10dp"
                    tools:ignore="LabelFor,RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_description"
                app:counterEnabled="true"
                app:counterMaxLength="500">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_account_desc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:lines="5"
                    android:maxLength="500"
                    android:paddingEnd="10dp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:paddingHorizontal="25dp"
            android:paddingVertical="12dp"
            android:text="@string/save"
            app:cornerRadius="40dp"
            app:icon="@drawable/ic_accept"
            app:strokeColor="?attr/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:text="@string/cancel"
            android:textColor="@color/red"
            app:cornerRadius="40dp"
            app:icon="@drawable/ic_cancel"
            app:iconTint="@color/red"
            app:rippleColor="@color/red"
            app:strokeColor="@color/red"
            app:strokeWidth="1dp" />
    </LinearLayout>
</LinearLayout>