<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bk_top_radius_40"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="100dp"
        android:layout_height="5dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/bk_radius_40"
        android:backgroundTint="?attr/colorOnSecondaryContainer"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal">

        <ImageView
            app:tint="?android:attr/textColorPrimary"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/bk_radius_40"
            android:contentDescription="@string/currencies"
            android:src="@drawable/ic_baseline_money_24" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:textColor="?android:attr/textColorPrimary"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/add_new_currency"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="NestedWeights" />


        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:endIconMode="clear_text"
                app:helperText="@string/required_field"
                app:helperTextEnabled="false"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_currency_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_currency_name"
                    android:inputType="text"
                    android:paddingEnd="10dp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:endIconMode="clear_text"
                app:helperText="@string/required_field"
                app:helperTextEnabled="false"
                app:helperTextTextColor="@color/red">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_currency_symbol"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ex_USD_RY"
                    android:inputType="text"
                    android:paddingEnd="10dp"
                    tools:ignore="RtlSymmetry" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:paddingHorizontal="25dp"
            android:paddingVertical="12dp"
            android:text="@string/save"
            app:cornerRadius="40dp"
            app:strokeColor="?attr/colorPrimary"
            app:icon="@drawable/ic_accept" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="6dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:text="@string/cancel"
            android:textColor="@color/red"
            app:cornerRadius="40dp"
            app:icon="@drawable/ic_cancel"
            app:iconTint="@color/red"
            app:rippleColor="@color/red"
            app:strokeColor="@color/red"
            app:strokeWidth="1dp" />
    </LinearLayout>
</LinearLayout>