<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginBottom="5dp"
    android:orientation="horizontal"
    android:paddingHorizontal="10dp">

    <ImageView
        app:tint="?android:attr/textColorPrimary"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:src="@drawable/ic_type"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="?android:attr/textColorPrimary"
                android:id="@+id/lbl_item_account_type_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_types"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/_seperat" />

            <TextView
                android:textColor="?android:attr/textColorSecondary"
                android:id="@+id/lbl_item_currency_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/currency" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:textColor="?android:attr/textColorSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/debit"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:textColor="?android:attr/textColorSecondary"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/credit"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:textColor="?android:attr/textColorPrimary"
                    android:id="@+id/lbl_item_debit"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/_00_0" />

                <TextView
                    android:textColor="?android:attr/textColorPrimary"
                    android:id="@+id/lbl_item_credit"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/_00_0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:visibility="invisible"
                    android:id="@+id/lbl_item_currency_symbol_debit"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/r_y" />

                <TextView
                    android:visibility="invisible"
                    android:id="@+id/lbl_item_currency_symbol_credit"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:gravity="center"
                    android:text="@string/r_y" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_item_debit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bk_radius_40"
                    android:backgroundTint="?attr/colorTertiary"
                    android:src="@drawable/ic_arrow_down"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

                <ImageView
                    android:id="@+id/img_item_credit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bk_radius_40"
                    android:backgroundTint="?colorPrimary"
                    android:src="@drawable/ic_arrow_up"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>